@@ -1,3 +1,10 @@
+2009-05-09  Scott James Remnant  <scott@netsplit.com>
+
+	* init/Makefile.am ($(com_ubuntu_Upstart_OUTPUTS)): 
+	($(com_ubuntu_Upstart_Job_OUTPUTS)): 
+	($(com_ubuntu_Upstart_Instance_OUTPUTS)): Use the Python variant
+	of nih-dbus-tool for now
+
 2009-03-27  Scott James Remnant  <scott@netsplit.com>
 
 	* init/tests/test_process.c (test_from_name): Cast -1 to ProcessType
